99-App/ingressroutes/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: app-001
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          ports:
            - name: web
              containerPort: 80
