99-App/ingressroutes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: app-001
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: whoami
