99-App/ingressroutes/ingressroutes.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: app-001
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`app-001.onmyowncorp.eu`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls:
    certResolver: default
